# secureguarddrift

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  create_week10_files.sh  pyproject.toml
api/: config.yaml  server.py  websocket.py
auth/: jwt_handler.py  middleware.py  permissions.py
cache/: __init__.py  cache.py  rate_limiter.py  redis_client.py
collector/: auto_detect.py  config.yaml  envoy_parser.py  ingress_parser.py  nginx_parser.py  otel_receiver.py  scheduler.py  watcher.py
core/: cache.py  config.py  database.py  logging.py  migrations.py  rate_limiter.py  security_headers.py
dashboard/: index.html  interaction.js  policies.js
data/: mock_ingress.csv  snapshots.db  test_qa.csv  test_qa_check.db
db/: __init__.py  adapter.py  base.py  models.py  repository.py
deploy/: .dockerignore  .env.example  Dockerfile  docker-compose.prod.yaml  docker-compose.yaml
docs/: api-reference.md  architecture.md  pilot-feedback.md  pilot-guide.md  week10-production-phase1.md  week5-real-data-collection.md  week6-networkpolicy-generator.md  week7-gitops-pr-bot.md  week8-integrations.md  week9-ml-intelligence.md
drift/: detector.py  explainer.py  report.py  rules.py  scorer.py
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gitops/: base_client.py  config.py  github_client.py  gitlab_client.py  pr_bot.py  storage.py
graph/: builder.py  models.py  storage.py
integrations/: config.py  jira_client.py  router.py  siem_exporter.py  slack_notifier.py
ml/: __init__.py  anomaly.py  baseline.py  feedback.py  patterns.py  smart_scorer.py  whitelist.py
policy/: generator.py  renderer.py  storage.py  templates.py
reports/: drift_report.md
scripts/: generate_mock_data.py  migrate_sqlite_to_pg.py  run_demo.py  run_demo.sh
tests/: __init__.py  conftest.py  test_adapter.py  test_alembic_migration.py  test_api.py  test_async_routes.py  test_builder.py  test_cache.py  test_celery_tasks.py  test_config.py  test_database_backend.py  (+33 more)
(+88 files in other folders)
