[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureguarddrift"
version = "0.1.0"
description = "Service dependency drift detection for security monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "pyjwt>=2.8.0",
    "gunicorn>=21.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.3.0",
]

[tool.setuptools.packages.find]
include = ["api*", "collector*", "graph*", "drift*", "scripts*", "policy*", "gitops*", "integrations*", "ml*", "auth*", "core*", "db*", "cache*", "worker*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
gnn = [
    "torch>=2.1.0",
    "torch_geometric>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
